--- a/index.htm
+++ b/index.htm
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <title>Document</title>
+    <title>Duty Roster</title>
 </head>
+<nav style="background-color: black; height: 60px;">
+<p style="color: white; font-size: 50px; text-align:center">DUTY ROSTER</p>
+</nav>
 <div class="container">
   <div class="one-half left">
-    <h1>Add/Edit Employee Data</h1>
-    <a href="#" class="cta">Let's Go</a>
+    <h1>Add / Edit Employee Data</h1>
+    <a href="addedit.htm" class="cta">Let's Go</a>
   </div>
   <div class="one-half right">
     <h1>Get Duty Roster</h1>
